test/cases/compile_errors/stage1/obj/implicit_semicolon-if-else-if_statement.zig
export fn entry() void {
    if(true) {} else if(true) {}
    var good = {};
    if(true) ({}) else if(true) ({})
    var bad = {};
}

// error
// backend=stage1
// target=native
//
// tmp.zig:4:37: error: expected ';' or 'else' after statement
